gcc/testsuite/rust/rustc/ui/issues/issue-15260.rs
struct Foo {
    a: usize,
}

fn main() {
    let Foo {
        a: _,
        a: _
// { dg-error ".E0025." "" { target *-*-* } .-1 }
    } = Foo { a: 29 };

    let Foo {
        a,
        a: _
// { dg-error ".E0025." "" { target *-*-* } .-1 }
    } = Foo { a: 29 };

    let Foo {
        a,
        a: _,
// { dg-error ".E0025." "" { target *-*-* } .-1 }
        a: x
// { dg-error ".E0025." "" { target *-*-* } .-1 }
    } = Foo { a: 29 };
}

